HelloUltraviolet/Fixtures/RejectedSource/Patterns/ExhaustivenessAndReachabilityDiagnostic/Expected.uv
//! Expected diagnostic metadata for the ExhaustivenessAndReachabilityDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2751", "diag.17.ExhaustivenessAndReachability")
